# chat_bot

./: .env.example  .gitignore  CONTENT_AGENT_ARCHITECTURE.md  Claude.md  DATABASE_SETUP.md  DEPLOYMENT.md  README.md  check-deployment.sh  deploy.sh  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.local.example  ADMIN_ROLE_PLAN.md  Dockerfile  alembic.ini  auth.py  build-and-push.sh  celery_app.py  chatbot_agent.py  cleanup_unpublished_children.py  config.py  conversation_memory.py  database.py  dependencies.py  entrypoint.sh  init-db.sh  main.py  migrate_to_chromadb.py  models.py  observability.py  pyproject.toml  redis_client.py  regenerate_article_resources.py  seed_db.py  sync_chromadb_to_aws.py
backend/agents/: __init__.py  analyst_agent.py  analyst_subgraph.py  article_query_agent.py  base_agent.py  content_agent.py  content_handler.py  data_download_agent.py  economist_agent.py  editor_handler.py  editor_sub_agent.py  editor_subgraph.py  equity_agent.py  fixed_income_agent.py  graph.py  graph_builder.py  intent_classifier.py  main_chat_agent.py  main_graph.py  navigation_handler.py  permission_utils.py  resource_processing_agent.py  router_agent.py  specialist_analysts.py  state.py  topic_manager.py  web_search_agent.py
backend/agents/builds/: __init__.py  base.py
backend/agents/nodes/: __init__.py  content_gen_node.py  editor_node.py  entitlements_node.py  general_chat_node.py  navigation_node.py  response_builder.py  router_node.py  ui_action_node.py
backend/agents/shared/: __init__.py  analyst_agent.py  article_query_agent.py  data_download_agent.py  editor_sub_agent.py  resource_query_agent.py  topic_manager.py  web_search_agent.py
backend/agents/tools/: __init__.py  article_tools.py  data_download_tools.py  economic_tools.py  editor_tools.py  equity_tools.py  fixed_income_tools.py  prompt_tools.py  resource_tools.py  tool_registry.py  web_search.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_user_tracking_fields.py  003_add_multi_agent_support.py  004_refactor_to_content_agents.py  005_add_analyst_groups.py  006_add_author_editor_fields.py  007_remove_content_column.py  008_restructure_groups.py  009_add_topic_admin_roles.py  010_add_article_status.py  011_add_prompt_modules.py  012_add_resources.py  013_add_resource_status.py  014_add_resource_parent_id.py  015_add_resource_hash_id.py  016_extend_hash_id_length.py  017_add_topics.py  018_add_access_mainchat.py  019_add_article_resource_type.py  020_add_article_priority_and_topic_order.py  021_add_popup_html_to_article_resources.py  022_add_html_resource_type.py  023_backfill_table_children.py  024_add_hitl_models.py  025_add_article_publication_hash_ids.py  026_remove_redundant_hash_ids.py
backend/api/: __init__.py  admin.py  admin_prompts.py  analyst.py  approvals.py  content.py  editor.py  prompts.py  reader.py  resources.py  tasks.py  topics.py  user.py  user_profile.py  websocket.py
backend/services/: __init__.py  agent_service.py  article_resource_service.py  content_cache.py  content_service.py  google_search_service.py  pdf_service.py  permission_service.py  prompt_service.py  resource_service.py  storage_service.py  table_resource_service.py  user_context_service.py  vector_service.py
backend/tasks/: __init__.py  agent_tasks.py
backend/tests/: conftest.py
docs/: README.md  (+32 more)
(+162 files in other folders)
