[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.15.0",
    "fastapi>=0.123.0",
    "google-api-python-client>=2.100.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.0",
    "ddgs>=9.9.3",
    "reportlab>=4.0.0",
    "markdown2>=2.4.0",
]
